# flightbus_protocol_demo

./: .gitignore  CMakeLists.txt  Kconfig  app.overlay  burst-example.json  crc-xmodem-zephyr.py  prj.conf
boards/: native_sim.overlay
src/: main.cpp
src/devices/uart/: UartBase.cpp  UartBase.hpp  protobuf_processor_uart.cpp  protobuf_processor_uart.hpp  uart_msg_processor.cpp  uart_msg_processor.hpp
src/devices/uart/cdc-acm/: UartCdcAcm.cpp  UartCdcAcm.hpp  UartCdcAcmWrapper.cpp  UartCdcAcmWrapper.hpp  uart_cdc_acm.c  uart_cdc_acm.h
src/devices/uart/native-sim/: UartGeneric.cpp  UartGeneric.hpp  i_uart_generic.c  i_uart_generic.h
src/flightbus-burst/: burst-formats.cpp  burst-formats.hpp  burst.cpp  burst.hpp
src/interfaces/: uart_cdc_acm.c  uart_cdc_acm.h  uart_msg_processor.cpp  uart_msg_processor.h  uart_msg_processor.hpp
src/interfaces/protobufs/: flightbus_message.proto  protobuf_util.cpp  protobuf_util.h  protobuf_util.hpp
src/protobufs/: flightbus_message.proto  protobuf_util.cpp  protobuf_util.hpp
src/wrappers/: UartCdcAcmWrapper.cpp  UartCdcAcmWrapper.hpp
